[package]
name = "PeerConnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1",features = ["full"]}
bytes="1"
tokio-tungstenite="0.16"
tungstenite="0.17"
crossterm="0.24"
futures-util="0.3"
[dev-dependencies]

[profile.release]